; ModuleID = '/home/carl/AnghaBench/git/extr_tree-walk.c_init_tree_desc_internal.c'
source_filename = "/home/carl/AnghaBench/git/extr_tree-walk.c_init_tree_desc_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_desc = type { i64, i8* }
%struct.strbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tree_desc*, i8*, i64, %struct.strbuf*)* @init_tree_desc_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_tree_desc_internal(%struct.tree_desc* %0, i8* %1, i64 %2, %struct.strbuf* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.tree_desc*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.strbuf*, align 8
  store %struct.tree_desc* %0, %struct.tree_desc** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store %struct.strbuf* %3, %struct.strbuf** %9, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load %struct.tree_desc*, %struct.tree_desc** %6, align 8
  %12 = getelementptr inbounds %struct.tree_desc, %struct.tree_desc* %11, i32 0, i32 1
  store i8* %10, i8** %12, align 8
  %13 = load i64, i64* %8, align 8
  %14 = load %struct.tree_desc*, %struct.tree_desc** %6, align 8
  %15 = getelementptr inbounds %struct.tree_desc, %struct.tree_desc* %14, i32 0, i32 0
  store i64 %13, i64* %15, align 8
  %16 = load i64, i64* %8, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %4
  %19 = load %struct.tree_desc*, %struct.tree_desc** %6, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load %struct.strbuf*, %struct.strbuf** %9, align 8
  %23 = call i32 @decode_tree_entry(%struct.tree_desc* %19, i8* %20, i64 %21, %struct.strbuf* %22)
  store i32 %23, i32* %5, align 4
  br label %25

24:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %25

25:                                               ; preds = %24, %18
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @decode_tree_entry(%struct.tree_desc*, i8*, i64, %struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
